--- a/NandS_TechniquesInFinance/Assignments/A2.ipynb
+++ b/NandS_TechniquesInFinance/Assignments/A2.ipynb
@@ -914,23 +914,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "id": "79be4956-4e3f-424d-8408-e3d761422202",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'The lowest N is 159!'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The optimal (lowest) N is: 159\n",
+      "At optimal N, the error is: 0.019955096161450636\n"
+     ]
     }
    ],
    "source": [
-    "def find_absolute_error(target_error):\n",
+    "def Find_Optimal_N(target_error):\n",
     "    tN, x0, xM, a = 2.0, -4.0, 4.0, 1.0\n",
     "\n",
     "    Indicator = True\n",
@@ -946,23 +944,26 @@
     "        \n",
     "        if error < target_error:\n",
     "            Indicator = False\n",
-    "            return f\"The lowest N is {N}!\"\n",
+    "            return N, error\n",
     "        \n",
     "        Count += 1\n",
     "        N += 1\n",
     "        M = 2 * N\n",
     "        \n",
-    "        if Count > 1_000_000:\n",
+    "        if Count > 1_000:\n",
     "            break\n",
     "\n",
     "    return \"Time out! Reaching Maximum iteration!\"\n",
     "\n",
-    "find_absolute_error(target_error = 0.02)"
+    "N, error = Find_Optimal_N(target_error = 0.02)\n",
+    "\n",
+    "print(f\"The optimal (lowest) N is: {N}\")\n",
+    "print(f\"At optimal N, the error is: {error}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "792f0fdf",
    "metadata": {},
    "outputs": [
