--- a/NandS_TechniquesInFinance/Assignments/A2.ipynb
+++ b/NandS_TechniquesInFinance/Assignments/A2.ipynb
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "79be4956-4e3f-424d-8408-e3d761422202",
    "metadata": {},
    "outputs": [
@@ -953,7 +953,7 @@
     "        if Count > 1_000:\n",
     "            break\n",
     "\n",
-    "    return \"Time out! Reaching Maximum iteration!\"\n",
+    "    return \"Time out!\"\n",
     "\n",
     "N, error = Find_Optimal_N(target_error = 0.02)\n",
     "\n",
