--- a/NandS_TechniquesInFinance/Assignments/A1.ipynb
+++ b/NandS_TechniquesInFinance/Assignments/A1.ipynb
@@ -13,8 +13,11 @@
     "$${\\Theta}_{\\mathrm{Call}}=\\frac{{\\partial}\\mathrm{Call}}{{\\partial}T}=rKe^{-rT}\\mathcal{N}(d_2)+\\frac{{\\sigma}S_0}{2\\sqrt{T}}\\mathcal{N}'(d_1)$$\n",
     "where\n",
     "\n",
-    "$$d_1 = \\frac{\\log(S_0/K)+(r+\\sigma^2/2)T}{\\sigma\\sqrt{T}}\\ ,\\hspace{10mm}d_2 = d_1-\\sigma\\sqrt{T}$$  \n",
-    "where $\\mathcal{N}$ is the cumulative distribution function (CDF) of a standard Gaussian variable, and therefore $\\mathcal{N}'$, the derivative of $\\mathcal{N}$, is the probability distribution function (PDF) of a standard Gaussian variable. Note that we ignore the dividend yield parameter for this exercise.\n"
+    "$$\n",
+    "d_1 = \\frac{\\log(S_0/K)+(r+\\sigma^2/2)T}{\\sigma\\sqrt{T}}\\ ,\\hspace{10mm}d_2 = d_1- \\sigma \\sqrt{T}\n",
+    "$$  \n",
+    "\n",
+    "where $\\mathcal{N}$ is the cumulative distribution function (CDF) of a standard Gaussian variable, and therefore $\\mathcal{N}$, the derivative of $\\mathcal{N}$, is the probability distribution function (PDF) of a standard Gaussian variable. Note that we ignore the dividend yield parameter for this exercise.\n"
    ]
   },
   {
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ef5b698b-fac9-4c8b-ac45-cc5c30246a00",
    "metadata": {},
    "outputs": [
@@ -226,18 +229,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N = 12822, h = 0.000076, Absolute Error = 0.010005\n",
-      "N = 12823, h = 0.000076, Absolute Error = 0.010004\n",
-      "N = 12824, h = 0.000076, Absolute Error = 0.010003\n",
-      "N = 12825, h = 0.000076, Absolute Error = 0.010003\n",
-      "N = 12826, h = 0.000076, Absolute Error = 0.010002\n",
-      "N = 12827, h = 0.000076, Absolute Error = 0.010001\n",
-      "N = 12828, h = 0.000076, Absolute Error = 0.010000\n",
-      "N = 12829, h = 0.000076, Absolute Error = 0.009999\n",
+      "N = 12822, h = 7.649112702926356e-05, Absolute Error = 0.010004868299933634\n",
+      "N = 12823, h = 7.6485161878595e-05, Absolute Error = 0.010004089630271551\n",
+      "N = 12824, h = 7.647919765823782e-05, Absolute Error = 0.01000331108447483\n",
+      "N = 12825, h = 7.647323436796999e-05, Absolute Error = 0.010002532631975924\n",
+      "N = 12826, h = 7.646727200757986e-05, Absolute Error = 0.010001754290096088\n",
+      "N = 12827, h = 7.646131057684885e-05, Absolute Error = 0.010000976098435643\n",
+      "N = 12828, h = 7.645535007555493e-05, Absolute Error = 0.01000019802642882\n",
+      "N = 12829, h = 7.644939050348645e-05, Absolute Error = 0.009999420068171005\n",
       "\n",
       "Required N: 12829\n",
-      "Corresponding mesh size: 0.000076\n",
-      "Absolute error at target T: 0.009999\n"
+      "Corresponding mesh size: 7.644939050348645e-05\n",
+      "Absolute error at target T: 0.009999420068171005\n"
      ]
     }
    ],
