--- a/NandS_TechniquesInFinance/Assignments/A1_sol.ipynb
+++ b/NandS_TechniquesInFinance/Assignments/A1_sol.ipynb
@@ -12,8 +12,10 @@
     "In the Black-Scholes model, the **Greeks** of the European Call option can be computed analytically. For example, using the same notations as in the lectures, the **Theta** of the European Call option, which is the partial derivative of the option price with respect to the time to maturity $T$, is given by\n",
     "$${\\Theta}_{\\mathrm{Call}}=\\frac{{\\partial}\\mathrm{Call}}{{\\partial}T}=rKe^{-rT}\\mathcal{N}(d_2)+\\frac{{\\sigma}S_0}{2\\sqrt{T}}\\mathcal{N}'(d_1)$$\n",
     "where\n",
+    "$$\n",
+    "d_1 = \\frac{\\log(S_0/K)+(r+\\sigma^2/2)T}{\\sigma\\sqrt{T}}\\ ,\\hspace{10mm}d_2 = d_1-\\sigma\\sqrt{T}\n",
+    "$$  \n",
     "\n",
-    "$$d_1 = \\frac{\\log(S_0/K)+(r+\\sigma^2/2)T}{\\sigma\\sqrt{T}}\\ ,\\hspace{10mm}d_2 = d_1-\\sigma\\sqrt{T}$$  \n",
     "where $\\mathcal{N}$ is the cumulative distribution function (CDF) of a standard Gaussian variable, and therefore $\\mathcal{N}'$, the derivative of $\\mathcal{N}$, is the probability distribution function (PDF) of a standard Gaussian variable. Note that we ignore the dividend yield parameter for this exercise.\n",
     "<!-- solution file -->"
    ]
