--- a/NandS_TechniquesInFinance/6_Multivariate_Simulation.ipynb
+++ b/NandS_TechniquesInFinance/6_Multivariate_Simulation.ipynb
@@ -5,7 +5,7 @@
    "id": "62880fdd",
    "metadata": {},
    "source": [
-    "### Multivariate random variables\n",
+    "### 多元随机变量 | Multivariate random variables\n",
     "\n",
     "We now consider the problem of simulating a $D$-dimensional random vector:\n",
     "\n",
@@ -16,9 +16,11 @@
     "\n",
     "1. The simple case:\n",
     "    - $X_1, X_2, \\cdots, X_D$ - Mutually independent.\n",
+    "    > 相互独立\n",
     "\n",
     "2. The general case:\n",
-    "    - $X_1, X_2, \\cdots, X_D$ - dependent\n"
+    "    - $X_1, X_2, \\cdots, X_D$ - dependent\n",
+    "    > 依赖"
    ]
   },
   {
@@ -34,7 +36,7 @@
    "id": "5e22bb3b",
    "metadata": {},
    "source": [
-    "### Independent Random Variables\n",
+    "### 独立随机变量 | Independent Random Variables\n",
     "\n",
     "Two random variables $X$ and $Y$ are independent if, $\\forall \\mathcal{A}, \\mathcal{B}$\n",
     "\n",
@@ -74,7 +76,7 @@
    "id": "b1484d49",
    "metadata": {},
    "source": [
-    "### Mutually independent random variables\n",
+    "### 相互独立随机变量 | Mutually independent random variables\n",
     "\n",
     "$D$ random variables $X_1, X_2, \\cdots, X_D$ are mutually independent if, $\\forall \\mathcal{A}_1, \\cdots, \\mathcal{A}_D$\n",
     "\n",
@@ -107,13 +109,16 @@
    "id": "2f642faf",
    "metadata": {},
    "source": [
-    "### Simulate independent random variables\n",
+    "### 模拟独立随机变量 | Simulate independent random variables\n",
     "\n",
     "If the $D$ random variables $X_1, \\cdots, X_D$ are mutually independent, then each random variable $X_d$ can be simulated independent according to its marginal distribution, using one of the previously introduced simulation algorithms (inversion method, acceptance-rejection method, etc.)\n",
+    "> 如果 $D$ 个随机变量 $X_1, \\cdots, X_D$ 是相互独立的，那么每个随机变量 $X_d$ 可以根据其边缘分布独立地模拟，使用先前介绍的模拟算法\n",
     "\n",
     "- The uniform distribution simulations underlying the generation of each simulation with distribution $X_d$ must come from the **same pseudorandom number generator**.\n",
+    "> 用于生成每个 $X_d$ 分布模拟的均匀分布模拟必须来自 **同一个伪随机数生成器**。\n",
     "\n",
-    "- This straightforward approach does not work if the random vairable $X_1, \\cdots, X_D$ are dependent.\n"
+    "- This straightforward approach does not work if the random vairable $X_1, \\cdots, X_D$ are dependent.\n",
+    "> 如果随机变量 $X_1, \\cdots, X_D$ 是依赖的，这种直接方法就不适用。\n"
    ]
   },
   {
@@ -129,7 +134,7 @@
    "id": "fe86728d",
    "metadata": {},
    "source": [
-    "### Correlated random variables\n",
+    "### 相关随机变量 | Correlated random variables\n",
     "\n",
     "The easiest example of simulation of dependent random variable is the case of two Gaussian variables with prescribed correlation $\\rho$.\n",
     "\n",
@@ -149,9 +154,10 @@
    "metadata": {},
    "source": [
     "If two random variables are independent, then $\\rho_{X,Y} = 0$.\n",
+    "> 如果两个随机变量是独立的，那么 $\\rho_{X,Y} = 0$。\n",
     "\n",
-    "However, the converse is generally not true:\n",
-    "- Two uncorrelated random variables are not necessarily independent.\n",
+    "However, the converse is generally not true: Two uncorrelated random variables are not necessarily independent.\n",
+    "> 反之一般不成立：两个不相关（uncorrelated）的随机变量不一定独立。\n",
     "\n",
     "Classical counterexample:\n",
     "- $X$ - Standard Gaussian variable\n",
@@ -159,7 +165,9 @@
     "\n",
     "$X$ and $Y$ are perfectly dependent.\n",
     "\n",
-    "However, $X$ and $Y$ are uncorrelated since $\\mathbb{E}[XY]=\\mathbb{E}[X^3]=0=\\mathbb{E}[X]\\mathbb{E}[Y]$"
+    "However, $X$ and $Y$ are uncorrelated since $\\mathbb{E}[XY]=\\mathbb{E}[X^3]=0=\\mathbb{E}[X]\\mathbb{E}[Y]$\n",
+    "\n",
+    "> $X$ 和 $Y$ 是完全依赖的，但是，$X$ 和 $Y$ 是不相关的。"
    ]
   },
   {
@@ -169,7 +177,10 @@
    "source": [
     "- Uncorrelatedness is equivalent to independence ONLY in special case when $X$ and $Y$ follow a joint normal distribution.\n",
     "\n",
-    "- Correltaion is a good measure of dependence ONLY in the multivariate Gaussian case"
+    "- Correltaion is a good measure of dependence ONLY in the multivariate Gaussian case\n",
+    "\n",
+    "> 不相关性 等价于独立性，仅当 $X$ 和 $Y$ 服从联合正态分布的特殊情况下成立。<br>\n",
+    "> 相关系数 仅在多元高斯情况下是依赖性的良好度量。"
    ]
   },
   {
@@ -185,7 +196,7 @@
    "id": "d518c6b7",
    "metadata": {},
    "source": [
-    "## 1. Simulation of Correlated Gaussian Variables"
+    "## 1. 相关高斯变量的模拟 | Simulation of Correlated Gaussian Variables"
    ]
   },
   {
@@ -193,7 +204,7 @@
    "id": "136a8e0d",
    "metadata": {},
    "source": [
-    "### 1.1 Bivariate Gaussian Variables\n",
+    "### 1.1 二元高斯变量 | Bivariate Gaussian Variables\n",
     "\n",
     "- $X \\sim \\mathcal{N}(0, 1)$, $Y \\sim \\mathcal{N}(0, 1)$ - Independent Standard Gaussian Variables\n",
     "\n",
@@ -233,11 +244,11 @@
    "id": "fee89815",
    "metadata": {},
    "source": [
-    "### 1.2 Multivariate Gaussian Variables\n",
+    "### 1.2 多元高斯变量 | Multivariate Gaussian Variables\n",
     "\n",
-    "- $\\mathcal{N}(\\mu, \\Sigma)$ - Multivariate Gaussian Distribution\n",
-    "- $\\mu \\in \\R^D$ - Location vector\n",
-    "- $\\Sigma \\in \\R^{D \\times D}$ - Covariance matrix\n",
+    "- $\\mathcal{N}(\\mu, \\Sigma)$ - Multivariate Gaussian Distribution - 多元高斯分布\n",
+    "- $\\mu \\in \\R^D$ - Location vector - 位置向量\n",
+    "- $\\Sigma \\in \\R^{D \\times D}$ - Covariance matrix - 协方差矩阵\n",
     "\n",
     "$$\n",
     "f(\\mathbf{x})=\\frac{1}{\\sqrt{(2\\pi)^D\\det(\\boldsymbol{\\Sigma})}}\\mathrm{exp}\\left(-\\frac{1}{2}(\\mathbf{x}-\\mu)^\\top\\boldsymbol{\\Sigma}^{-1}(\\mathbf{x}-\\mu)\\right)\n",
@@ -245,13 +256,7 @@
     "\n",
     "Using this new notation, the previous bivariate gaussian vecotr $[X, Z]^T$ has:\n",
     "- Mean - $\\mu=[0,0]^\\top$\n",
-    "- Covariance - $\\boldsymbol{\\Sigma}=\\begin{bmatrix}1&\\rho\\\\\\rho&1\\end{bmatrix}$\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "- Covariance - $\\boldsymbol{\\Sigma}=\\begin{bmatrix}1&\\rho\\\\\\rho&1\\end{bmatrix}$\n"
    ]
   },
   {
@@ -267,7 +272,7 @@
    "id": "596a4f63",
    "metadata": {},
    "source": [
-    "### 1.3 Simulate Multivariate Gaussian Variables\n",
+    "### 1.3 模拟多元高斯变量 | Simulate Multivariate Gaussian Variables\n",
     "\n",
     "If the covariance matrix can be decomposed as,\n",
     "\n",
@@ -280,11 +285,7 @@
     "$$\n",
     "\\color{yellow}\n",
     "\\mathbf{X}=\\mu+\\mathbf{AN}\\sim\\mathcal{N}(\\mu,\\mathbf{\\Sigma})\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "$$\n"
    ]
   },
   {
@@ -300,9 +301,10 @@
    "id": "f9a30672",
    "metadata": {},
    "source": [
-    "### 1.4 Simulate Bivariate Gaussian Variables\n",
+    "### 1.4 模拟二元高斯变量 | Simulate Bivariate Gaussian Variables\n",
     "\n",
     "Simulated Two correlated Gaussian variable:\n",
+    "> 模拟两个相关高斯变量：\n",
     "\n",
     "$$\n",
     "\\begin{bmatrix}\n",
@@ -350,6 +352,7 @@
    "metadata": {},
    "source": [
     "More generally, we can simulate a bivariate Gaussian vector with general mean $\\mu$ and general covariance $\\Sigma$.\n",
+    "> 更一般地，我们可以模拟具有一般均值 $\\mu$ 和一般协方差 $\\Sigma$ 的二元高斯向量。\n",
     "\n",
     "A general matrix can be written as:\n",
     "\n",
@@ -408,19 +411,25 @@
    "id": "48f8710b",
    "metadata": {},
    "source": [
-    "### 1.5 Simluate Multivariate Gaussian Variables\n",
+    "### 1.5 模拟多元高斯变量 | Simluate Multivariate Gaussian Variables\n",
     "\n",
     "- $\\mathbf{N}=[N_1,N_2,\\ldots,N_D]^\\top\\sim\\mathcal{N}(\\mathbf{0},\\mathbf{I})$\n",
     "\n",
     "These independent Gaussian variables can be simulated, for example, from the Box-Muller algorithm.\n",
+    "> 这些独立高斯变量可以通过例如 Box-Muller 算法来模拟。\n",
     "\n",
     "In order to simulate $\\mathbf{X}=[X_1,X_2,\\ldots,X_D]^\\top\\sim\\mathcal{N}(\\mu,\\boldsymbol{\\Sigma})$, the only difficulty is to compute the square-root matrix $\\mathrm{A}$ of $\\boldsymbol{\\Sigma}=\\mathbf{A}\\mathbf{A}^\\top$.\n",
+    "> 为了模拟 $\\mathbf{X}=[X_1,X_2,\\ldots,X_D]^\\top\\sim\\mathcal{N}(\\mu,\\boldsymbol{\\Sigma})$，唯一的困难是计算 $\\boldsymbol{\\Sigma}=\\mathbf{A}\\mathbf{A}^\\top$ 的平方根矩阵 $\\mathrm{A}$。\n",
     "\n",
     "This can be achieved using the $\\color{yellow}\\text{Cholesky Decomposition}$.\n",
+    "> 这可以通过 $\\color{yellow}\\text{Cholesky 分解}$ 来实现。\n",
     "\n",
-    "> It is a numerically stable algorithm, with computational complexity $\\mathcal{O}(D^3)$, and is twice faster than the LU decomposition.\n",
+    "- Numerically stable, **数值稳定**\n",
+    "- Computational complexity, 计算复杂度 - $\\mathcal{O}(D^3)$\n",
+    "- Twice faster than the LU decomposition - 比 LU 分解快两倍\n",
     "\n",
-    "Then, computing $\\mathbf{X}=\\mu+\\mathbf{AN}$ provides simulations with the desired distribution $\\mathbf{X}\\sim\\mathcal{N}(\\mu,\\boldsymbol{\\Sigma})$\n"
+    "Then, computing $\\mathbf{X}=\\mu+\\mathbf{AN}$ provides simulations with the desired distribution $\\mathbf{X}\\sim\\mathcal{N}(\\mu,\\boldsymbol{\\Sigma})$\n",
+    "> 然后，计算 $\\mathbf{X}=\\mu+\\mathbf{AN}$ 提供了具有所需分布 $\\mathbf{X}\\sim\\mathcal{N}(\\mu,\\boldsymbol{\\Sigma})$ 的模拟。\n"
    ]
   },
   {
@@ -599,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "id": "95f0a7b7",
    "metadata": {},
    "outputs": [
@@ -734,6 +743,264 @@
     "\n",
     "mu, sigma1, sigma2, rho, n_samples = np.array([0, 0]), 1.0, 1.0, 0.0, 5_000\n",
     "samples = create_bivariate_normal_combined_plot(mu = mu, sigma1 = sigma1, sigma2 = sigma2, rho = rho, n_samples = n_samples)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb181293",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec5abe41",
+   "metadata": {},
+   "source": [
+    "#### 评论 | Comments\n",
+    "\n",
+    "1. A scatter plot is a good starting point to visualize bivariate data.\n",
+    "\n",
+    "2. If the dataset is very large, a 2D histogram might be preferable.\n",
+    "\n",
+    "3. A contour plot makes it possible to visualize the level sets of the bivariate density.\n",
+    "    - It first requires an estimation of the density from the dataset.\n",
+    "    - This is achieved by kernel density estimation (KDE)\n",
+    "\n",
+    "4. The last few plots combine a scatterplot, a histogram and a contour plot on the same figure, along with the marginal distributions (also estimated by kernel density estimation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29371cb8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a09851e5",
+   "metadata": {},
+   "source": [
+    "### 1.7 二元高斯分布 | Bivariate Gaussian Distribution\n",
+    "\n",
+    "1. The level sets of the bivariate Gaussian distribution are ellipses.\n",
+    "    - In the independent case $\\rho = 0$, they become circles.\n",
+    "    > 二元高斯分布的水平集是椭圆。<br>\n",
+    "    > 在独立情况 $\\rho = 0$ 下，它们变成圆。\n",
+    "\n",
+    "2. As the absolute value of $\\rho$ increases, these ellipses are squeezed towards the line defined by:\n",
+    "> 随着 $\\rho$ 的绝对值增加，这些椭圆被挤压朝向由以下定义的直线：\n",
+    "\n",
+    "$$\n",
+    "x_2=\\mathrm{sign}(\\rho)\\frac{\\sigma_2}{\\sigma_1}(x_1-\\mu_1)+\\mu_2\n",
+    "$$\n",
+    "\n",
+    "Replacing $\\mathrm{sign}(\\rho)$ by $\\rho$ gives the conditional expectation of $X_2$ conditioned on $X_1 = x_1$, which correpsondings to the best linear unbiased prediction of $X_2$ given a value of $X_1$.\n",
+    "> 将 $\\mathrm{sign}(\\rho)$ 替换为 $\\rho$ 给出 $X_2$ 在 $X_1 = x_1$ 条件下的条件期望，这对应于给定 $X_1$ 值时 $X_2$ 的最佳线性无偏预测（best linear unbiased prediction）。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b84663",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f076a79",
+   "metadata": {},
+   "source": [
+    "### 1.8 病态协方差矩阵 | Ill-Conditioned Covariance Matrix\n",
+    "\n",
+    "When estimating a high-dimensional covariance matrix on financial data, it is very likely that the matrix will be ill-conditioned due to virtual multicollinearity.\n",
+    "> 当在金融数据上估计高维协方差矩阵时，由于虚拟多重共线性（virtual multicollinearity），矩阵很可能是病态的（ill-conditioned）。\n",
+    "\n",
+    "Condition number of a matrix, e.g., a positive-definite, symmetric square matrix , s.a., a covariance matrix $\\Sigma$:\n",
+    "\n",
+    "$$\n",
+    "\\text{cond} = \\frac{\\lambda_1(\\Sigma)}{\\lambda_D(\\Sigma)} \n",
+    "$$\n",
+    "- $\\lambda_1(\\Sigma)$ - Largest eigenvalue\n",
+    "- $\\lambda_D(\\Sigma)$ - Smallest eigenvalue\n",
+    "\n",
+    "Numerical algorithms such as the Cholesky decomposition might struggle to return reliable results if the covariance matrix is very ill-conditioned.\n",
+    "> 如果协方差矩阵非常病态，数值算法如 Cholesky 分解可能难以返回可靠的结果。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc507a6a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd16b5a",
+   "metadata": {},
+   "source": [
+    "### 1.9 协方差矩阵正则化 | Covariance Matrix Regularization\n",
+    "\n",
+    "A common approach is to regularize the matrix, which means replacing it by a very close yet much better conditioned matrix.\n",
+    "> 将其替换为一个非常接近但条件数更好的矩阵。\n",
+    "\n",
+    "The simplest regularization technique is to replace $\\Sigma$ by:\n",
+    "\n",
+    "$$\n",
+    "\\boldsymbol{\\Sigma}_\\varepsilon:=\\frac{1}{1+\\varepsilon}(\\boldsymbol{\\Sigma}+\\varepsilon\\mathbf{I})\n",
+    "$$\n",
+    "\n",
+    "This leaves the eigenvectors of $\\Sigma$ unchanged but replaces the eigenvalues $\\lambda_d(\\boldsymbol{\\Sigma})$, $d = 1, ..., D$ of $\\Sigma$ by:\n",
+    "\n",
+    "$$\n",
+    "\\lambda_d(\\boldsymbol{\\Sigma}_\\varepsilon)=\\frac{\\lambda_d(\\boldsymbol{\\Sigma})+\\varepsilon}{1+\\varepsilon}\n",
+    "$$\n",
+    "\n",
+    "The new condition number is:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{cond}(\\boldsymbol{\\Sigma}_{\\varepsilon})=\\frac{\\lambda_{1}(\\boldsymbol{\\Sigma})+\\varepsilon}{\\lambda_{D}(\\boldsymbol{\\Sigma})+\\varepsilon}\\ll\\frac{\\lambda_{1}(\\boldsymbol{\\Sigma})}{\\lambda_{D}(\\boldsymbol{\\Sigma})}=\\mathrm{cond}(\\boldsymbol{\\Sigma})\n",
+    "$$\n",
+    "\n",
+    "Indeed, one can show that:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{cond}(\\boldsymbol{\\Sigma}_\\varepsilon)=1+\\frac{\\lambda_D(\\boldsymbol{\\Sigma})}{\\lambda_D(\\boldsymbol{\\Sigma})+\\varepsilon}(\\mathrm{cond}(\\boldsymbol{\\Sigma})-1)\n",
+    "$$\n",
+    "- $\\mathrm{cond}(\\boldsymbol{\\Sigma})\\geq1$\n",
+    "- $\\frac{\\lambda_D(\\boldsymbol{\\Sigma})}{\\lambda_D(\\boldsymbol{\\Sigma})+\\varepsilon}<1$\n",
+    "\n",
+    "This is an example of Shrinkage Estimator.\n",
+    "> 收缩估计量\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e4d5de",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63760a6c",
+   "metadata": {},
+   "source": [
+    "## 2. 相关非高斯变量的模拟 | Simulation of Correlated Non-Gaussian Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6541f465",
+   "metadata": {},
+   "source": [
+    "### 2.1 Iman-Conover 方法 | The Iman-Conover Method\n",
+    "\n",
+    "Unlike the Gaussian case, there is no simple way to simulate a multivariate random vector with prescribed covariance matrix in the non-Gaussian case.\n",
+    "> 在非高斯情况下，没有简单的方法来模拟具有指定协方差矩阵的多元随机向量。\n",
+    "\n",
+    "We are going to describe the most common method, known as the Iman-Conover method, to attempt to solve this problem.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c99f04",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa44ed2f",
+   "metadata": {},
+   "source": [
+    "### 相关性的局限性 | Limitations of Correlations\n",
+    "\n",
+    "1. In the Gaussian case, the $\\color{yellow}\\text{dependence structure}$ of a random vector is fully determined by its covariance matrix. \n",
+    "> 在高斯情况下，随机向量的 $\\color{yellow}\\text{依赖结构}$ 完全由其协方差矩阵决定。\n",
+    "2. In the non-Gaussian case, this is not the case anymore, 在非高斯情况下，情况不再如此：:\n",
+    "    - Uncorrelated variables are not necessarily independent\n",
+    "    > 不相关的变量不一定是独立的\n",
+    "    - The same marginal distributions and covariances can be achieved by infinitely many different joint distributions.\n",
+    "    > 相同的 边缘分布 和 协方差 可以通过无限多个不同的 联合分布 来实现。\n",
+    "\n",
+    "As a result, the intuition we get about the meaning of correlation in the Gaussian context does not apply to non-Gaussian variables. \n",
+    "> 在高斯背景下获得的关于相关性含义的直觉，并不适用于非高斯变量。\n",
+    "\n",
+    "In other words, correlations are not a great way of defining or measuring the dependence structure between (non-Gaussian) variables\n",
+    "> 相关性不是定义或衡量（非高斯）变量之间依赖结构的理想方式。\n",
+    "\n",
+    "More suitable tools are needed, such as $\\color{yellow}\\text{copulas, 连接函数}$.\n",
+    "> \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb36a842",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2369b5cf",
+   "metadata": {},
+   "source": [
+    "### 额外信息\n",
+    "\n",
+    "背景：\n",
+    "- 在金融等领域，许多变量（如资产收益率、风险因子）的分布并非完美的高斯分布（正态分布），它们可能具有尖峰、厚尾等特征。\n",
+    "- 我们需要模拟这些具有特定相关性和给定边缘分布的非高斯变量。\n",
+    "\n",
+    "挑战：\n",
+    "- 对于多元高斯分布，整个依赖结构完全由协方差矩阵决定，并且有 Cholesky 分解这样的标准方法进行模拟。\n",
+    "- 但对于非高斯分布，协方差矩阵不足以唯一确定联合分布。\n",
+    "- 这意味着，即使两个多元非高斯模型具有完全相同的边缘分布和协方差矩阵，它们的联合分布（即变量如何共同变化的模式）也可能完全不同。\n",
+    "\n",
+    "相关性 ≠ 依赖性\n",
+    "- 相关性 特指 线性相关性，由皮尔逊相关系数 $\\rho$ 衡量。\n",
+    "- 依赖性 是一个更广泛的概念，包括非线性关系（例如，一个变量是另一个变量的平方）。\n",
+    "- 关键：\n",
+    "    - 两个变量可以不相关，但仍然高度依赖\n",
+    "    - 在高斯分布中，不相关 = 独立"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "875424ce",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91562b8c",
+   "metadata": {},
+   "source": [
+    "## 3. Copulas\n",
+    "\n",
+    "定义：\n",
+    "- Copula 是一种函数，它能将多个边缘分布“连接”起来，形成一个联合分布。\n",
+    "\n",
+    "> Sklar 定理 指出，任何多元联合分布都可以分解为它的多个边缘分布和一个 Copula 函数，该 Copula 函数完全描述了变量间的依赖结构。\n",
+    "\n",
+    "优势：\n",
+    "- 分离性：\n",
+    "    - 将变量的边缘分布和变量间的依赖结构分离开来，允许我们独立地建模。\n",
+    "- 更丰富的依赖度量：\n",
+    "    - Copula 能够捕捉非线性、非对称的依赖关系，特别是在分布尾部的依赖行为（如金融危机中资产同时暴跌的现象），这是简单的线性相关无法做到的。\n",
+    "- 灵活性：\n",
+    "    - 可以选择不同的 Copula 函数（如高斯 Copula, t-Copula）来描述各种复杂的依赖模式。\n"
    ]
   },
   {
