--- a/NandS_TechniquesInFinance/6_Multivariate_Simulation.ipynb
+++ b/NandS_TechniquesInFinance/6_Multivariate_Simulation.ipynb
@@ -1260,9 +1260,9 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "& \\mathcal{C}_\\theta(u,v) = \\left(u^{-\\theta} + v^{-\\theta} - 1\\right)^{-1/\\theta} \\\\\n",
-    "& c_{\\theta,u}(v) := \\frac{\\partial\\mathcal{C}_\\theta}{\\partial u}(u,v) = u^{-\\theta-1}\\left(u^{-\\theta} + v^{-\\theta} - 1\\right)^{-\\frac{1}{\\theta}-1} \\\\\n",
-    "& c_{\\theta,u}^{-1}(v) = \\left(1 + u^{-\\theta}\\left(v^{-\\frac{\\theta}{1 + \\theta}}-1\\right)\\right)^{-\\frac{1}{\\theta}}\n",
+    "& \\mathcal{C}(u,v) = \\left(u^{-\\theta} + v^{-\\theta} - 1\\right)^{-1/\\theta} \\\\\n",
+    "& c_{u}(u, v) := \\frac{\\partial\\mathcal{C}}{\\partial u}(u,v) = u^{-\\theta-1}\\left(u^{-\\theta} + v^{-\\theta} - 1\\right)^{-\\frac{1}{\\theta}-1} \\\\\n",
+    "& c_{u}^{-1}(u, v) = \\left(1 + u^{-\\theta}\\left(v^{-\\frac{\\theta}{1 + \\theta}}-1\\right)\\right)^{-\\frac{1}{\\theta}}\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
