--- a/Investment_Practice/Assignments/A2/A2.ipynb
+++ b/Investment_Practice/Assignments/A2/A2.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,13 @@
     "print(\"   \\n2. What does this tell you about sector diversification?\")\n",
     "print(\"   Answer: Sector diversification helps in reducing overall portfolio risk by spreading investments across different sectors, which may not be perfectly correlated. This leads to a more efficient risk-return trade-off.\")\n",
     "print(\"   \\n3. For a target return of 15%, which portfolio has lower risk?\")\n",
-    "print(\"   Answer: For a target return of 15%, Portfolio 2 (Diversified Sectors) has lower risk compared to Portfolio 1 (Tech Sector). This further emphasizes the benefits of diversification in reducing portfolio volatility.\")"
+    "print(\"   Answer: For a target return of 15%, Portfolio 2 (Diversified Sectors) has lower risk compared to Portfolio 1 (Tech Sector). This further emphasizes the benefits of diversification in reducing portfolio volatility.\")\n",
+    "\n",
+    "print(\"\\n💡 Key Findings:\")\n",
+    "print(\"   🔴 Red line (Tech Sector): Limited by high correlations between tech stocks\")\n",
+    "print(\"   🔵 Blue line (Diversified): More favorable risk-return tradeoff\")\n",
+    "print(\"\\n   ✅ For the same level of return, the diversified portfolio achieves LOWER risk!\")\n",
+    "print(\"   ✅ This demonstrates the power of cross-sector diversification!\")"
    ]
   },
   {
@@ -767,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +877,26 @@
     "print(\"   \\n2. What does this tell you about correlations within each portfolio?\")\n",
     "print(\"   Answer: The higher interaction variance in Portfolio 1 indicates that the assets within the tech sector are more correlated with each other, leading to greater combined risk from their interactions. In contrast, Portfolio 2's lower interaction variance suggests that diversification across sectors reduces correlations among assets, thereby lowering overall portfolio risk.\")\n",
     "print(\"   \\n3. How much risk reduction did sector diversification achieve?\")\n",
-    "print(f\"   Answer: Sector diversification achieved a risk reduction of {risk_reduction_pct:.1f}%.\")"
+    "print(f\"   Answer: Sector diversification achieved a risk reduction of {risk_reduction_pct:.1f}%.\")\n",
+    "\n",
+    "print(\"\\n💡 Critical Insights from Risk Decomposition:\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"\\n1. Portfolio Volatility Comparison:\")\n",
+    "print(f\"   Tech Sector: {p1_risk_decomp['portfolio_volatility']:.2%}\")\n",
+    "print(f\"   Diversified: {p2_risk_decomp['portfolio_volatility']:.2%}\")\n",
+    "vol_reduction = (1 - p2_risk_decomp['portfolio_volatility']/p1_risk_decomp['portfolio_volatility']) * 100\n",
+    "print(f\"   🎯 Risk Reduction: {vol_reduction:.1f}% through sector diversification!\")\n",
+    "\n",
+    "print(f\"\\n2. Interaction Variance (Correlation Effects):\")\n",
+    "print(f\"   Tech Sector: {p1_interaction_pct:.1f}% of total variance\")\n",
+    "print(f\"   Diversified: {p2_interaction_pct:.1f}% of total variance\")\n",
+    "print(f\"   ⚠️  High correlations in tech sector amplify portfolio risk!\")\n",
+    "print(f\"   ✅ Lower correlations across sectors reduce interaction risk!\")\n",
+    "\n",
+    "print(f\"\\n3. Key Takeaway:\")\n",
+    "print(f\"   Holding 5 tech stocks ≠ True diversification\")\n",
+    "print(f\"   Sector diversification provides REAL risk reduction\")\n",
+    "print(f\"   Same number of stocks, but {vol_reduction:.1f}% less risk!\")"
    ]
   },
   {
@@ -891,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -970,6 +995,9 @@
     "print(f\"\\n✅ Diversification Benefit Comparison:\")\n",
     "print(f\"   Tech Sector: {p1_div_benefit:.2f}% risk reduction\")\n",
     "print(f\"   Diversified: {p2_div_benefit:.2f}% risk reduction\")\n",
+    "benefit_diff = p2_div_benefit - p1_div_benefit\n",
+    "print(f\"\\n   🎯 Sector diversification provides {benefit_diff:.2f} percentage points\")\n",
+    "print(f\"      MORE diversification benefit than within-sector diversification!\")\n",
     "\n",
     "# Visualize diversification benefits\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
@@ -1001,27 +1029,49 @@
    "source": [
     "---\n",
     "\n",
-    "## Summary and Conclusions\n",
+    "## Summary and Key Takeaways\n",
     "\n",
-    "### 🎯 Key Takeaways:\n",
+    "### 🎯 What We Learned:\n",
     "\n",
     "1. **Sector Concentration Risk**:\n",
-    "   - Stocks within the same sector are highly correlated\n",
+    "   - Stocks within the same sector are highly correlated (ρ ≈ 0.7-0.9)\n",
     "   - High correlations limit diversification benefits\n",
     "   - \"5 tech stocks ≠ true diversification\"\n",
     "\n",
     "2. **Efficient Frontier Analysis**:\n",
-    "   #CODE HERE - Write what you observed about the efficient frontiers\n",
+    "   - Diversified portfolios dominate single-sector portfolios\n",
+    "   - For the same return target, diversified portfolios achieve lower risk\n",
+    "   - The efficient frontier \"shifts left\" with better diversification\n",
     "\n",
     "3. **Risk Decomposition Insights**:\n",
-    "   #CODE HERE - Write what the risk decomposition analysis revealed\n",
+    "   - Tech sector portfolio has higher interaction variance (correlation effects)\n",
+    "   - Diversified portfolio has more balanced risk contributions\n",
+    "   - Lower correlations mean less amplification of individual risks\n",
     "\n",
     "4. **Practical Implications**:\n",
-    "   #CODE HERE - List 3-5 practical lessons for portfolio construction\n",
+    "   - Always diversify across sectors, not just within sectors\n",
+    "   - Monitor correlation structures in your portfolio\n",
+    "   - Sector ETFs can help achieve instant diversification\n",
+    "   - Risk reduction through diversification is \"the only free lunch in finance\"\n",
     "\n",
-    "### 📈 Your Conclusions:\n",
+    "### 📈 Real-World Applications:\n",
     "\n",
-    "#CODE HERE - Write a paragraph summarizing why sector diversification matters\n",
+    "- **Portfolio Construction**: Build multi-sector portfolios for better risk-adjusted returns\n",
+    "- **Risk Management**: Identify and reduce sector concentration risk\n",
+    "- **Asset Allocation**: Allocate across sectors based on correlation and risk contribution analysis\n",
+    "- **Performance Evaluation**: Compare portfolio efficiency using efficient frontier analysis\n",
+    "\n",
+    "### 🔗 Connection to Investment Practice:\n",
+    "\n",
+    "This lab demonstrates a fundamental principle of Modern Portfolio Theory:\n",
+    "\n",
+    "> **Diversification works best when assets are not perfectly correlated!**\n",
+    "\n",
+    "In practice:\n",
+    "- Individual investors: Use sector-diversified mutual funds or ETFs\n",
+    "- Portfolio managers: Monitor sector exposures and correlation changes\n",
+    "- Risk managers: Set sector concentration limits\n",
+    "- Financial advisors: Educate clients about true diversification\n",
     "\n",
     "---\n",
     "\n",
