--- a/NandS_TechniquesInFinance/7_Monte_Carlo.ipynb
+++ b/NandS_TechniquesInFinance/7_Monte_Carlo.ipynb
@@ -1314,7 +1314,7 @@
    "id": "635932a7",
    "metadata": {},
    "source": [
-    "### 3.4 Nerry-Esseen theorem\n",
+    "### 3.4 Berry-Esseen theorem\n",
     "\n",
     "The empirical CDF of a sample $Z_1,Z_2,\\ldots,Z_M$ —— $\\displaystyle F_M(z):=\\frac{1}{M}\\sum_{m=1}^M1\\{Z_m\\leq z\\}$\n",
     "\n",
@@ -1365,6 +1365,106 @@
   {
    "cell_type": "markdown",
    "id": "0bc5919d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b170e9fc",
+   "metadata": {},
+   "source": [
+    "### 3.6 Monte Carlo Option Pricing\n",
+    "\n",
+    "- $\\left(S_{t_n}^m\\right)_{n=0,\\ldots,N}^{m=1,\\ldots,M}$ - $M$ Monte Carlo simulations of a stochastic model $S=(S_t)_{0\\leq t\\leq T}$\n",
+    "- $f(S_T)$ - Final payoff of a European option\n",
+    "\n",
+    "> e.g., \n",
+    "> - $\\begin{aligned}f(S_T)=(S_T-K)^+\\end{aligned}$ - Call option\n",
+    "> - $f(S_T)=\\underline{(}K-S_T)^+$ - Put option\n",
+    "\n",
+    "A Monte Carlo estimator of the price $P_0=\\mathbb{E}[e^{-rT}f(S_T)]$ is given by:\n",
+    "\n",
+    "$$\n",
+    "P_0^M:=\\frac{1}{M}\\sum_{m=1}^Me^{-rT}f(S_T^m)\n",
+    "$$\n",
+    "\n",
+    "If the stochastic model $S$ is such that $P_0$ exists and is finite, then the strong law of large numbers applies and ensures that $\\displaystyle \\lim_{M\\to\\infty}P_0^M\\xrightarrow{a.s.}P_0$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36a234d1",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "323fe444",
+   "metadata": {},
+   "source": [
+    "### 3.7 Convergence Speed\n",
+    "\n",
+    "- $\\sigma^2=\\mathbb{V}\\mathrm{ar}[e^{-rT}f(S_T)]$\n",
+    "\n",
+    "An asymptotic $1-\\varepsilon\\%$ confidence interval for $P_0^{M}$:\n",
+    "\n",
+    "$$\n",
+    "\\left[P_0 + \\frac{\\sigma}{\\sqrt M}\\Phi^{-1}(\\frac{\\varepsilon}{2}), P_0 + \\frac{\\sigma}{\\sqrt M}\\Phi^{-1}(1 - \\frac{\\varepsilon}{2})\\right]\n",
+    "$$\n",
+    "\n",
+    "> **The smaller this interval, the better.**\n",
+    "\n",
+    "It can be shortened by:\n",
+    "\n",
+    "1. $\\color{yellow}\\text{Increasing}$ $M$. \n",
+    "    - It is simple and safe but the computational cost of the Monte Carlo algorithm is $\\mathcal{O}(M)$, and halving the interval requires to multiply $M$ by $4$.\n",
+    "\n",
+    "2. $\\color{yellow}\\text{Reducing}$ $\\sigma$.\n",
+    "    - There exist many techniques known as $\\color{yellow}\\text{variance reduction techniques}$ to reduce the variance of a Monte Carlo estimator. \n",
+    "    - They are sometimes specific to one type of payoff.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "930b0f6d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f359c4c",
+   "metadata": {},
+   "source": [
+    "### 3.8 Examples of exotic financial options\n",
+    "\n",
+    "1. Asian option: call example: $$\\mathrm{payoff}=\\max(S_T-\\frac{1}{T}\\int_0^TS_tdt,0)$$\n",
+    "\n",
+    "2. Lookback option: call example: $$\\mathrm{payoff}=S_T-\\min_{0\\leq t\\leq T}S_t$$\n",
+    "\n",
+    "3. Rainbow option: call on max: $$\\mathrm{payoff}=\\max(\\max(S_{1,T},S_{2,T})-K,0)$$\n",
+    "\n",
+    "4. Basket option: call example: $$\\mathrm{payoff}=\\max((S_{1,T}+S_{2,T})/2-K,0)$$\n",
+    "\n",
+    "5. Barrier option: up-and-out call: $$\\max(S_T-K,0)\\mathbf{1}(\\max_{0\\leq t\\leq T}S_t\\leq B)$$\n",
+    "\n",
+    "6. TARF option = Target Accrual Redemption Forward\n",
+    "\n",
+    "$$P=\\mathbb{E}\\left[\\sum_{n=1}^Ne^{-rt_n}\\left(S_{t_n}-K\\right)\\mathbf{1}{\\left\\{\\sum_{\\ell=1}^n\\max\\left(S_{t_\\ell}-K,0\\right)<\\mathrm{Target}\\right\\}}\\right]$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44be851a",
    "metadata": {},
    "source": [
     "---"
